--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "next": "15.0.3",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "prisma": "^6.0.1",
     "typescript": "^5.6.3"
   }
 }
