--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "vamo-marcar",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next-auth": "^4.24.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.15"
   },
-
   "devDependencies": {
     "@types/node": "^20.17.6",
     "@types/react": "^18",
