--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
@@ -30,5 +32,10 @@
     "eslint-config-next": "15.0.3",
     "prisma": "^6.1.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
